--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                     class="profile-pic">
             </div>
             <h1>Lucas Silva</h1>
-            <p>Desenvolvedor Web</p>
+            <p>Desenvolvedor Front-End</p>
         </div>
     </main>
 
     <section id="sobre" class="container__sobre">
         <h2 class="sobre_titulo">Sobre Mim</h2>
         <div class="sobre__caixa">
-            <p> 💻 Como UX/UI Designer e Desenvolvedor Web, adoro transformar ideias do papel em experiências digitais
+            <p> 💻 Como UX/UI Designer e Desenvolvedor Front-End, adoro transformar ideias do papel em experiências digitais
                 reais ✨.
                 Minha paixão é fazer design e código andarem juntos, criando soluções que sejam ao mesmo tempo
                 criativas, funcionais e inteligentes 🎨.
@@ -117,7 +117,7 @@
             <div class="footer__content">
                 <div class="footer__info">
                     <h3 class="footer__nome">Lucas Silva</h3>
-                    <p class="footer__profissao">Desenvolvedor Web & UX/UI Designer</p>
+                    <p class="footer__profissao">Desenvolvedor Front-End & UX/UI Designer</p>
                 </div>
 
                 <div class="footer__links">
