--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main id="inicio" class="container">
         <div>
             <div class="circle-container">
-                <img src="img.png/WhatsApp Image 2025-05-23 at 14.48.42_cleanup (1).png" alt="Lucas Silva"
+                <img src="lucas-silva.jpeg" alt="Lucas Silva"
                     class="profile-pic">
             </div>
             <h1>Lucas Silva</h1>
