--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <main id="inicio" class="container">
         <div>
             <div class="circle-container">
-                <img src="lucas-silva.jpeg" alt="Lucas Silva"
-                    class="profile-pic">
+                <img src="assets/lucas-silva.jpeg" alt="Lucas Silva" class="profile-pic">
             </div>
             <h1>Lucas Silva</h1>
             <p>Desenvolvedor Front-End</p>
@@ -33,7 +32,8 @@
     <section id="sobre" class="container__sobre">
         <h2 class="sobre_titulo">Sobre Mim</h2>
         <div class="sobre__caixa">
-            <p> 💻 Como UX/UI Designer e Desenvolvedor Front-End, adoro transformar ideias do papel em experiências digitais
+            <p> 💻 Como UX/UI Designer e Desenvolvedor Front-End, adoro transformar ideias do papel em experiências
+                digitais
                 reais ✨.
                 Minha paixão é fazer design e código andarem juntos, criando soluções que sejam ao mesmo tempo
                 criativas, funcionais e inteligentes 🎨.
@@ -47,16 +47,15 @@
         <h2>Meus Projetos</h2>
         <div class="projetos__caixa">
             <div class="projeto-card">
-                <img src="img.png/projeto1.png" alt="Loja de Carros" class="projeto-imagem">
+                <img src="assets/projeto1.png" alt="Loja de Carros" class="projeto-imagem">
                 <div class="container_textos">
                     <h3 class="info_projeto">Loja de carros</h3>
                     <p class="info_conteudo">Loja virtual moderna com animações suaves e design responsivo para uma loja
                         de carros de luxo.</p>
                 </div>
             </div>
-
             <div class="projeto-card">
-                <img src="img.png/projeto2.png" alt="Página de Viagens" class="projeto-imagem">
+                <img src="assets/projeto2.png" alt="Página de Viagens" class="projeto-imagem">
                 <div class="container_textos">
                     <h3 class="info_projeto">Página de Viagens</h3>
                     <p class="info_conteudo">Uma página interativa com roteiros de Viagem mais cobiçados do mundo.</p>
@@ -64,7 +63,7 @@
             </div>
 
             <div class="projeto-card">
-                <img src="img.png/projeto3.png" alt="Microsoft" class="projeto-imagem">
+                <img src="assets/projeto3.png" alt="Microsoft" class="projeto-imagem">
                 <div class="container_textos">
                     <h3 class="info_projeto">Microsoft</h3>
                     <p class="info_conteudo">Página da Microsoft criada para demostrar conhecimentos em diversas
@@ -77,7 +76,8 @@
     <section id="contato" class="container__contato">
         <h2 class="contato_titulo">Entre em Contato</h2>
 
-        <form class="contato__formulario" id="formulario-contato" action="https://formsubmit.co/lucassilva1710@yahoo.com" method="POST">
+        <form class="contato__formulario" id="formulario-contato"
+            action="https://formsubmit.co/lucassilva1710@yahoo.com" method="POST">
 
             <div class="contato">
                 <label for="nome">Nome:</label>
@@ -91,14 +91,15 @@
 
             <div class="contato">
                 <label for="mensagem">Mensagem:</label>
-                <textarea id="mensagem" name="mensagem" rows="7" placeholder="Digite a sua mensagem"required></textarea>
+                <textarea id="mensagem" name="mensagem" rows="7" placeholder="Digite a sua mensagem"
+                    required></textarea>
             </div>
 
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_subject" value="Novo contato do portfólio">
             <input type="hidden" name="_template" value="box">
             <input type="hidden" name="_autoresponse" value="Obrigado por entrar em contato! Em breve retornarei.">
-            
+
 
             <button type="submit">Enviar</button>
         </form>
