--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main id="inicio" class="container">
         <div>
             <div class="circle-container">
-                <img src="assets/lucas-silva.jpeg" alt="Lucas Silva" class="profile-pic">
+                <img src="assets/lucas-silva.png" alt="Lucas Silva" class="profile-pic">
             </div>
             <h1>Lucas Silva</h1>
             <p>Desenvolvedor Front-End</p>
