--- a/index.html
+++ b/index.html
@@ -32,13 +32,9 @@
     <section id="sobre" class="container__sobre">
         <h2 class="sobre_titulo">Sobre Mim</h2>
         <div class="sobre__caixa">
-            <p> 💻 Como UX/UI Designer e Desenvolvedor Front-End, adoro transformar ideias do papel em experiências
-                digitais
-                reais ✨.
-                Minha paixão é fazer design e código andarem juntos, criando soluções que sejam ao mesmo tempo
-                criativas, funcionais e inteligentes 🎨.
-                Meu objetivo é sempre entregar produtos leves, intuitivos e que façam sentido para quem os utiliza,
-                proporcionando uma navegação fluida e agradável 🚀.
+            <p> 💻 Como UX/UI Designer e Desenvolvedor Front-End, adoro transformar ideias do papel em experiências digitais reais ✨.
+                Gosto de fazer design e código andarem juntos, criando soluções que sejam ao mesmo tempo criativas, funcionais e inteligentes 🎨.
+                Meu objetivo é sempre entregar produtos leves, intuitivos e que façam sentido para quem os utiliza, proporcionando uma navegação fluida e agradável 🚀.
             </p>
         </div>
     </section>
